--- a/dashboard.css
+++ b/dashboard.css
@@ -143,7 +143,8 @@ body{
 	margin-left: 10px;
 }
 table {
-  font-family: arial, sans-serif;
+  /* font-family: arial, sans-serif; */
+  font-family: Montserrat;
   border-collapse: collapse;
   width: 100%;
   
@@ -270,7 +271,8 @@ header img {
 }
 
 header a {
-  font-family: var(--Sniglet-font);
+  /* font-family: var(--Sniglet-font); */
+  font-family: Montserrat;
   font-size: 0.9em;
   color: rgb(28, 0, 140);
 }
