--- a/css/winners_page.css
+++ b/css/winners_page.css
@@ -73,7 +73,8 @@
         backface-visibility: hidden;
         text-align: center;
         min-height: 320px;
-        height: auto;
+        /* height: auto; */
+        height: 60%;
         border-radius: 10px;
         color: #000;
         font-size: 1rem;
@@ -356,6 +357,7 @@
         position: absolute;
         top: 0;
         left: 0;
+        /* height: 70%; */
         width: 100%;
       }
       
