Update Content in Index and About Pages

--- a/css/about.css
+++ b/css/about.css
@@ -21,3 +21,11 @@
 .aboutsection-bottom p {
   text-align: justify;
 }
+
+.aboutsection-agritech {
+  margin-bottom: 60px;
+}
+
+.aboutsection-agritech p {
+  text-align: justify;
+}
